@startuml

title __CLIENT's Class Diagram__\n

  package Client {
    class Client {
        - name : String
        - address : String
        - port : int
        - ID : int
        - socket : DatagramSocket
        - ip : InetAddress
        - send : Thread
        + Client()
        + getName()
        + getAddress()
        + getPort()
        + setID()
        + getID()
        + openConnection()
        + receive()
        + send()
        + close()
    }
  }
  

  package Client {
    class ClientMain {
        + start()
    }
  }
  

  package Client {
    class ClientWindow {
        + console : TextArea
        + messageField : TextField
        - running : boolean
        ~ listen : Thread
        ~ run : Thread
        + initialize()
        + onKeyPressed()
        + buttonClick()
        - printIntoChat()
        - send()
        - listen()
        + run()
    }
  }
  

  package Client {
    class Login {
        + username : TextField
        + address : TextField
        {static} + clientUsername : String
        {static} + serverAddress : String
        + login()
    }
  }
  

  ClientMain -up-|> Application
  ClientWindow -up-|> Runnable
  ClientWindow -up-|> Initializable
  ClientWindow o-- Client : client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
